--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -589,7 +589,8 @@ on property:ro.debuggable=1
 service adbd /sbin/adbd --root_seclabel=u:r:su:s0
     class core
     socket adbd stream 660 system system
-    disabled
+    #disabled
+	enabled
     seclabel u:r:adbd:s0
 
 # adbd on at boot in emulator
